name:                   programming-in-haskell-book
version:                0.1.0.0
build-type:             Simple
cabal-version:          >=1.10

executable programming-in-haskell-book
  hs-source-dirs:       src
  main-is:              Main.hs
  other-modules:        Countdown
  default-language:     Haskell2010
  ghc-options:          -threaded
                        -Werror
                        -Wall
                        -Wcompat
                        -Wnoncanonical-monad-instances
                        -Wnoncanonical-monadfail-instances
                        -Wincomplete-uni-patterns
                        -Wincomplete-record-updates
                        -fdefer-typed-holes
                        -fno-warn-missing-signatures
                        -fno-warn-partial-type-signatures
  default-extensions:   BangPatterns
                        InstanceSigs
                        LambdaCase
                        MultiWayIf
                        NoMonomorphismRestriction
                        OverloadedStrings
                        PartialTypeSignatures
                        PatternGuards
                        ScopedTypeVariables
                        TypeApplications
                        ViewPatterns
  build-depends:        base
